[TEST] Add unit and integration tests